[package]
name = "bacnet-mqtt-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
dioxus = "0.4"
dioxus-web = "0.4"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio-tungstenite = "0.21"
rumqttc = "0.24"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
if-addrs = "0.7"
log = "0.4"
env_logger = "0.11"
bacnet-rs = "0.2.2"
